synopsis: "dfuzz: Linear Dependent Types for Differential Privacy"
description: """
dFuzz provides a type checker for linear dependent types
"""
opam-version: "2.1.2"
maintainer: "Emilio J. Gallego Arias <e@x80.org>"
authors: "Arthur Azevedo de Amorim, Emilio J. Gallego Arias, Marco Gaboardi, Justin Hsu"
homepage: "https://github.com/ejgallego/dfuzz"
bug-reports: "https://github.com/ejgallego/dfuzz/issues"
dev-repo: "git+https://github.com/ejgallego/dfuzz.git"
license: "MIT"

depends: [
  "ocaml"                { >= "4.13.1"   }
  "dune"                 { >= "2.9.3"    }
  "menhir"               { >= "20211128" }
  "why3"                 {  = "1.5.0"    }
  "alt-ergo"             {  = "2.4.1"    }
]

build: [ [ "dune" "build" "-p" name "-j" jobs ] ]
