(library
 (name dfuzz)
 (wrapped false)
 (modules :standard \ dfuzz)
 (libraries unix menhirLib why3)
 (preprocess (pps ppx_deriving.show ppx_deriving.ord)))

(executable
 (public_name dfuzz)
 (modules dfuzz)
 (libraries dfuzz)
 (preprocess (pps ppx_deriving.show ppx_deriving.ord)))

(ocamllex lexer)
(menhir
 (modules parser)
 (flags --unused-tokens --fixed-exception))
